--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body
 {
-  background: linear-gradient(to right,#2a2a2b,#3e3e40);
-  background-size: cover;
+  background-color: #3e3e40;
 }
 #a
 {
